no cache, filesize

--- a/src/main/webapp/convert/videos-edit.jspx
+++ b/src/main/webapp/convert/videos-edit.jspx
@@ -4,7 +4,7 @@
     xmlns:fn="http://java.sun.com/jsp/jstl/functions"
     xmlns:mm="http://www.mmbase.org/mmbase-taglib-2.0"
     xmlns:tmf="urn:jsptagdir:/WEB-INF/tags/tmf"
-    expires="120" type="text/html"
+    expires="0" type="text/html"
     language="client">
 <jsp:output doctype-root-element="html"
       doctype-public="-//W3C//DTD XHTML 1.1//EN"
@@ -48,6 +48,10 @@
   </style>
 </head>
 <body>
+  
+  <mm:escaper id="myfilesize" type="filesize">
+    <mm:param name="binaryPrefixes">${empty initParam['mmbase.filesize.binaryPrefixes'] ? true : initParam['mmbase.filesize.binaryPrefixes']}</mm:param>
+  </mm:escaper>
   
   <mm:import externid="nr" />
   
@@ -121,15 +125,16 @@
           <c:if test="${_.main}">
             <mm:node number="${_.source.number}">
               <p>
-                source : <a href="${mm:escape('text/xml', _.URL)}"><mm:escape>${_.URL}</mm:escape></a>
-                <mm:import id="source" reset="true">${_.source.number}</mm:import>
-                <br />
+                <mm:field name="gui()" escape="none" />
                 ${_.dimension} -
                 ${_.mimeType} -
                 ${_.codec} -
                 <mm:hasfield name="bitrate"><mm:field name="bitrate" /></mm:hasfield>
                 <mm:hasfield name="fps">/<mm:field name="fps" /></mm:hasfield> 
-                [<mm:field name="number" />]
+                <c:if test="${_.filesize > 0}"> - ${mm:escape('myfilesize',_.filesize)}</c:if>
+                [<mm:field name="number" />]<br />
+                source : <a href="${mm:escape('text/xml', _.URL)}"><mm:escape>${_.URL}</mm:escape></a>
+                <mm:import id="source" reset="true">${_.source.number}</mm:import>
               </p>
               <p>
                 <mm:hasfunction name="updateSources">
@@ -176,7 +181,7 @@
         <mm:listfunction name="filteredurls">
           <c:if test="${!_.main}">
             <mm:node number="${_.source.number}" notfound="skip">
-              <li>${_.mimeType} / ${_.codec}</li>
+              <li>cache : ${mm:escape('text/xml', _.URL)} (${_.mimeType}; ${_.codec})</li>
             </mm:node>
           </c:if>
         </mm:listfunction>
