--- a/src/main/webapp/list.jspx
+++ b/src/main/webapp/list.jspx
@@ -48,6 +48,7 @@
               
               <c:choose>
                 <c:when test="${type eq 'video'}">
+                  
                   <mm:link page="media">
                     <mm:frameworkparam name="component">tmf</mm:frameworkparam>
                     <mm:frameworkparam name="n">${_node}</mm:frameworkparam>
@@ -64,11 +65,15 @@
                       <mm:field name="title" />
                     </a>
                     <mm:relatednodes type="keyword">
-                      <mm:first><br /><strong>Keywords: </strong></mm:first> 
-                      <mm:field name="keyword" /><mm:last inverse="true">, </mm:last>
+                      <mm:first><br /><strong class="tag">tags:</strong></mm:first> 
+                      <mm:link page="search">
+                        <mm:frameworkparam name="component">tmf</mm:frameworkparam>
+                        <mm:frameworkparam name="n">${_node}</mm:frameworkparam>
+                        <a class="tag" href="${_}"><mm:field name="keyword" /></a><mm:last inverse="true">,</mm:last>
+                      </mm:link>
                     </mm:relatednodes>
-                    
                   </mm:link>
+                  
                 </c:when>
                 <c:otherwise>
                   
@@ -85,13 +90,16 @@
                     <mm:field name="firstname"/> <mm:field name="prefix"><mm:isnotempty><mm:write /> </mm:isnotempty></mm:field><mm:field name="sirname"/><mm:last inverse="true">, </mm:last>
                   </mm:relatednodes>
                   <mm:relatednodes type="keyword">
-                    <mm:first><br /><strong>Keywords: </strong></mm:first> 
-                    <mm:field name="keyword" /><mm:last inverse="true">, </mm:last>
+                    <mm:first><br /><strong class="tag">tags:</strong></mm:first> 
+                    <mm:link page="search">
+                      <mm:frameworkparam name="component">tmf</mm:frameworkparam>
+                      <mm:frameworkparam name="n">${_node}</mm:frameworkparam>
+                      <a class="tag" href="${_}"><mm:field name="keyword" /></a><mm:last inverse="true">,</mm:last>
+                    </mm:link>
                   </mm:relatednodes>
                   
                 </c:otherwise>
               </c:choose>
-              
               
               <br /><br /><br />
             </mm:listnodes>
