--- a/src/main/webapp/search.jspx
+++ b/src/main/webapp/search.jspx
@@ -62,22 +62,71 @@
             referids="index,value,offset,max,fields?,sortfields?,filter?,extraconstraints?,analyzer?" />
          
           <c:if test="${!empty q}">
-            <p>
-              Searched with <strong>'${mm:escape('text/xml', q)}'</strong>.
-            </p>
+            <h2 class="searched_with">
+              Searched with '${mm:escape('text/xml', q)}'
+            </h2>
           </c:if>
           
           <mm:listnodes referid="results" varStatus="status" id="content">
-            
-            <mm:link page="content">
-              <mm:frameworkparam name="component">tmf</mm:frameworkparam>
-              <mm:frameworkparam name="n">${_node}</mm:frameworkparam>
-              <mm:frameworkparam name="t">${type}s</mm:frameworkparam> <!-- TODO: replace this ugliness ! -->
               
-              <h3><mm:field name="title" /></h3>
-              <a href="${_}">${_}</a>
+              <h5><mm:nodeinfo type="type" id="type" /></h5>
               
-            </mm:link>
+              <c:choose>
+                <c:when test="${type eq 'video'}">
+                  
+                  <mm:link page="media">
+                    <mm:frameworkparam name="component">tmf</mm:frameworkparam>
+                    <mm:frameworkparam name="n">${_node}</mm:frameworkparam>
+                    
+                    <a class="medium" href="${_}">
+                      <mm:relatednodes type="picture" max="1">
+                        <mm:import id="pic" reset="true">ok</mm:import>
+                        <mm:image mode="img" width="100" />
+                        <img src="${mm:link('/style/images/play_small.png')}" class="playIcon" /><br />
+                      </mm:relatednodes>
+                      <mm:isempty referid="pic">
+                        <img src="${mm:link('/style/images/video-003.gif')}" alt="${_node.title}" width="100"  />
+                      </mm:isempty>
+                      <mm:field name="title" />
+                    </a>
+                    <mm:relatednodes type="keyword">
+                      <mm:first><br /><strong class="tag">tags:</strong></mm:first> 
+                      <mm:link page="search">
+                        <mm:frameworkparam name="component">tmf</mm:frameworkparam>
+                        <mm:frameworkparam name="n">${_node}</mm:frameworkparam>
+                        <a class="tag" href="${_}"><mm:field name="keyword" /></a><mm:last inverse="true">,</mm:last>
+                      </mm:link>
+                    </mm:relatednodes>
+                  </mm:link>
+                  
+                </c:when>
+                <c:otherwise>
+                  
+                  <mm:link page="content">
+                    <mm:frameworkparam name="component">tmf</mm:frameworkparam>
+                    <mm:frameworkparam name="n">${_node}</mm:frameworkparam>
+                    <mm:frameworkparam name="t">${type}s</mm:frameworkparam> <!-- TODO: replace this ugliness ! -->
+                    <a class="medium" href="${_}"><mm:field name="title" /></a>
+                  </mm:link>
+              
+                  <mm:field name="subtitle"><mm:isnotempty><br /><mm:write/></mm:isnotempty></mm:field>
+                  <mm:relatednodes type="person" role="author" searchdir="destination">
+                    <mm:first><br /></mm:first>
+                    <mm:field name="firstname"/> <mm:field name="prefix"><mm:isnotempty><mm:write /> </mm:isnotempty></mm:field><mm:field name="sirname"/><mm:last inverse="true">, </mm:last>
+                  </mm:relatednodes>
+                  <mm:relatednodes type="keyword">
+                    <mm:first><br /><strong class="tag">tags:</strong></mm:first> 
+                    <mm:link page="search">
+                      <mm:frameworkparam name="component">tmf</mm:frameworkparam>
+                      <mm:frameworkparam name="n">${_node}</mm:frameworkparam>
+                      <a class="tag" href="${_}"><mm:field name="keyword" /></a><mm:last inverse="true">,</mm:last>
+                    </mm:link>
+                  </mm:relatednodes>
+                  
+                </c:otherwise>
+              </c:choose>
+              
+              <br /><br /><br />
 
           </mm:listnodes>
         
