new template for latest additions to site

--- a/src/main/webapp/home.jspx
+++ b/src/main/webapp/home.jspx
@@ -16,7 +16,7 @@
    
   <tmf:html
       cacheable="${cacheable}"
-      styleClass="about">
+      styleClass="home">
     
     
     <jsp:attribute name="title"></jsp:attribute>
